{
    "name": "InputAction",
    "maps": [
        {
            "name": "Move",
            "id": "bb6621d9-7e0a-4b5d-af78-df2582bc5d48",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "e614f958-5f09-416d-8515-e7dc5344d0d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f366558c-20e3-4597-8f23-109a546f73ef",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "93f2a104-accc-4748-a04a-a6dff92f2d51",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "80a7afd8-9466-422f-908e-fd03b9c1565b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "350c23b8-6c69-451c-8652-95ba9831b24c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "69ca12e2-f87f-4fdb-bcea-5db9eed4b70e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Shot",
            "id": "052902ad-be52-4496-b129-03d0ec6c0231",
            "actions": [
                {
                    "name": "Cross",
                    "type": "Button",
                    "id": "81ff8fc8-0bbc-4f89-b096-ca0c7553a0be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84785f8e-6855-486a-a170-ad088d3d21f4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf476b22-3639-49a1-822e-56feda2ede14",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a9ef01e-0c52-4025-9175-00d65e5b0fa4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38273e60-8e17-4533-ba17-0a5ad87a6cda",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Bomb",
            "id": "02ba8c7e-2e1f-4997-9fbf-c0631fac5df4",
            "actions": [
                {
                    "name": "Bomb",
                    "type": "Button",
                    "id": "d1a08402-9e93-4ec5-862b-aaa87c15390b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b4cf0ec-98e5-4261-bb60-2ac007600be0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Active",
            "id": "cc1f08c8-5131-4729-b9c1-2c45ae941cb7",
            "actions": [
                {
                    "name": "Active",
                    "type": "Button",
                    "id": "f1d1d195-35ff-4faf-8ac9-a98aa5bcda1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c991d9ef-da30-404b-97ba-cf41bde009f6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}